# docx-rs

./: Cargo.toml
src/: docx.rs  error.rs
src/document/: mod.rs
src/formatting/: table_justification.rs
